working on the buttons of the calculator

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     background-color: aqua;
     height: 600px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .display {
@@ -19,3 +20,41 @@ body {
     margin-right: auto;
     margin-top: 30px;;
 }
+
+.cancelAndBackspace {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.clear, .backspace {
+    width: 60px;
+    height: 45px;
+    margin-right: 53px;
+    font-size: 20px;
+}
+
+.backspace {
+    width: 60px;
+    height: 40px;
+    margin-right: 31px;
+}
+
+.backspace_img {
+    width: 35px;
+    height: 35px;
+}
+
+.Mathoperator {
+    display: flex;
+    justify-content: space-around;
+}
+
+.add, .subtract, .multiply, .divide {
+    width: 60px;
+    height: 45px;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
