--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@ body {
 }
 
 .container {
-    width: 450px;
+    width: 430px;
     background-color: aqua;
-    height: 600px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    height: 470px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
 .display {
@@ -31,30 +31,36 @@ body {
 .clear, .backspace {
     width: 60px;
     height: 45px;
-    margin-right: 53px;
+    margin-right: 46.5px;
     font-size: 20px;
 }
 
 .backspace {
     width: 60px;
-    height: 40px;
-    margin-right: 31px;
+    height: 45px;
+    margin-right: 29.5px;
 }
 
 .backspace_img {
     width: 35px;
     height: 35px;
+    margin-top: 3px;
 }
 
-.Mathoperator {
+.buttonsrow {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 15px;
 }
 
-.add, .subtract, .multiply, .divide {
+.buttonStyle {
     width: 60px;
     height: 45px;
     margin-right: 10px;
     font-size: 20px;
+}
+
+.equalButton {
+    background-color: skyblue;
 }
 
