--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,26 @@ body {
     margin-bottom: 70px;
 }
 
+.displayInsideContainer {
+    width: 400px;
+    height: 50px;
+    background-color: blue;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 0px;
+}
+
 .display {
     width: 400px;
-    height: 100px;
+    height: 50px;
     background-color: bisque;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;;
+    margin-top: 0px;
 }
+
+
 
 .cancelAndBackspace {
     display: flex;
