--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     margin-bottom: 70px;
 }
 
-.displayInsideContainer {
+.displayFirstContainer {
     width: 400px;
     height: 50px;
     background-color: blue;
