--- a/styles.css
+++ b/styles.css
@@ -6,32 +6,41 @@ body {
 
 .container {
     width: 430px;
-    background-color: aqua;
-    height: 470px;
-    margin-top: 70px;
+    background-color: #5E6873;
+    height: 500px;
+    margin-top: 50px;
     margin-bottom: 70px;
+}
+
+.heading {
+    margin-left: 138px;
+    color: white;
 }
 
 .displayFirstContainer {
     width: 400px;
     height: 50px;
-    background-color: blue;
+    background-color: #D5D9D9;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
     margin-bottom: 0px;
+    font-weight: bold;
+    text-align: right;
+    font-size: 18px;
 }
 
 .display {
     width: 400px;
     height: 50px;
-    background-color: bisque;
+    background-color: #EFF3F3;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
+    font-weight: bold;
+    text-align: right;
+    font-size: 24px;
 }
-
-
 
 .cancelAndBackspace {
     display: flex;
@@ -59,6 +68,10 @@ body {
     margin-top: 3px;
 }
 
+.operatorButtonStyle {
+    background-color: #DF9C88;
+}
+
 .buttonsrow {
     display: flex;
     justify-content: space-around;
@@ -73,7 +86,7 @@ body {
 }
 
 .equalButton {
-    background-color: skyblue;
+    background-color: #4984CB;
 }
 
 .zero {
